finished page2 and page3

--- a/travel_recommendation_aboutus.css
+++ b/travel_recommendation_aboutus.css
@@ -15,62 +15,6 @@ body {
     overflow: hidden;
 }
 
-#flyingsaucer-path {
-    position: absolute;
-    margin-top: 10vh;
-    margin-left: 100%;
-    animation: flyingsaucer 5s linear infinite;
-}
-
-@keyframes flyingsaucer {
-    0% {
-        transform: translateX(-120vw);
-    }
-
-    100% {
-        transform: translateX(100vw);
-    }
-}
-
-#contactus-main {
-    position: absolute;
-    display: flex;
-    width: 600px;
-    height: 800px;
-    left: 50vw;
-
-}
-
-#contactus-title {
-    color: white;
-    font-size: 80px;
-    font-family: "Arvo";
-    font-weight: 900;
-    padding-left: 25%;
-}
-
-#contactus-helptext {
-    color: rgb(236, 234, 234);
-    padding-left: 37%;
-    font-size: 1.2rem;
-}
-
-#contactus-entry-form {
-    display: block;
-    background-color: white;
-    color: black;
-    margin-top: 33%;
-    margin-left: -20%;
-    padding-top: 13px;
-    width: 80%;
-    height: auto;
-    border-radius: 15px;
-    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 09);
-    grid-template-areas: "label-textbox";
-    background: linear-gradient(-45deg, rgb(187, 92, 92), rgb(117, 117, 202), rgb(235, 229, 229));
-    z-index: 1;
-}
-
 #aboutus-main {
     position: absolute;
     display: grid;
@@ -122,6 +66,56 @@ body {
     z-index: 1;
 }
 
+#arrows {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+}
+
+#arrows img {
+    cursor: pointer;
+    margin-top: 50px;
+}
+
+#coffin-path {
+    position: absolute;
+    margin-top: 10vh;
+    margin-left: 100%;
+    animation: coffin 20s linear infinite;
+}
+
+@keyframes coffin {
+    0% {
+        transform: translateX(-150vw) translateY(-100vh) rotate(15deg);
+    }
+
+    15% {
+        transform: translateX(-150vw) translateY(-50vh) rotate(30deg);
+    }
+
+    30% {
+        transform: translateX(-100vw) translateY(30vh) rotate(45deg);
+    }
+
+    45% {
+        transform: translateX(-60vw) translateY(60vh) rotate(60deg);
+    }
+
+    60% {
+        transform: translateX(-30vw) translateY(80vh) rotate(85deg);
+    }
+
+    75% {
+        transform: translateX(10vw) translateY(100vh) rotate(100deg);
+    }
+
+    100% {
+        transform: translateX(20vw) translateY(120vh) rotate(180deg);
+    }
+}
+
 #airplane3-path {
     position: absolute;
     margin-top: 10vh;
@@ -138,11 +132,3 @@ body {
         transform: translateX(100vw) translateY(-120vh);
     }
 }
-
-#earth-agent {}
-
-#moon-agent {}
-
-#mars-agent {}
-
-#saturn-agent {}
