--- a/index.css
+++ b/index.css
@@ -7,11 +7,11 @@
 body {
     position: absolute;
     display: flex;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     background-image: url("./images/worldcity.png");
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100dvw 100dvh;
     overflow: hidden;
 }
 
@@ -86,7 +86,7 @@ body {
     }
 
     100% {
-        transform: translateX(-120dvw); 
+        transform: translateX(-120dvw);
     }
 }
 
