end of day checkin

--- a/index.css
+++ b/index.css
@@ -191,25 +191,27 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
-#result {
+.result {
     width: 29dvw;
     height: 400px;
     overflow: hidden;
     background-color: burlywood;
 }
 
-#result-caption {
+.result-caption {
     font-size: 1.2rem;
-    font-family: "Arvo";
-    font-weight: 600;
+    font-family: "Barlow", sans-serif;
+    font-weight: 900;
     margin-left: 12px;
     height: 30px;
     overflow: hidden;
 }
 
-#result-description {
-    font-size: 1rem;
+.result-description {
+    font-size: 1.1rem;
+    font-family: "Barlow", sans-serif;
     margin-left: 12px;
+    margin-right: 12px;
     margin-top: -4px;
 }
 
