--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ body {
 #search-box {
     position: relative;
     display: flex;
-    background-color: white;
+    background-color: rgb(232, 240, 254);
     height: 30px;
     width: 600px;
     border-radius: 20px;
@@ -192,8 +192,10 @@ body {
 }
 
 .result {
-    width: 29dvw;
+    width: 28dvw;
     height: 400px;
+    border-radius: 15px;
+    box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 09);
     overflow: hidden;
     background-color: burlywood;
 }
